# unichar-ir

./: README.md
fhe/: .gitignore  CMakeLists.txt  setup.sh
fhe/include/SEAL-4.1/seal/util/: config.h
fhe/lib/pkgconfig/: seal.pc
fhe/src/: main.cpp
